[gd_scene load_steps=20 format=2]

[ext_resource path="res://grafik/frame-2.png" type="Texture" id=1]
[ext_resource path="res://grafik/frame-4.png" type="Texture" id=2]
[ext_resource path="res://grafik/frame-5.png" type="Texture" id=3]
[ext_resource path="res://grafik/frame-6.png" type="Texture" id=4]
[ext_resource path="res://grafik/frame-1.png" type="Texture" id=5]
[ext_resource path="res://grafik/frame-3.png" type="Texture" id=6]
[ext_resource path="res://grafik/frame-7.png" type="Texture" id=7]
[ext_resource path="res://grafik/frame-8.png" type="Texture" id=8]
[ext_resource path="res://grafik/Background.png" type="Texture" id=9]
[ext_resource path="res://ParallaxBackground.gd" type="Script" id=10]
[ext_resource path="res://Node2D - Flere Vaegge.tscn" type="PackedScene" id=11]
[ext_resource path="res://KinematicBody2D.gd" type="Script" id=12]
[ext_resource path="res://Control - pointtavle.tscn" type="PackedScene" id=13]
[ext_resource path="res://FlappyBirdy.ttf" type="DynamicFontData" id=14]

[sub_resource type="DynamicFont" id=3]
size = 30
outline_size = 4
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 14 )

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 5 ), ExtResource( 1 ), ExtResource( 6 ), ExtResource( 2 ), ExtResource( 3 ), ExtResource( 4 ), ExtResource( 7 ), ExtResource( 8 ) ],
"loop": true,
"name": "default",
"speed": 10.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 35, 30 )

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0.847059, 0.0784314, 0.0784314, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 1, 1, 1, 1 )
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15

[sub_resource type="DynamicFont" id=4]
size = 46
outline_size = 4
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 14 )

[node name="FlappyBird" type="Node2D"]

[node name="FlappyBirdLogo" type="Control" parent="."]
margin_left = 71.0
margin_top = 114.0
margin_right = 71.0
margin_bottom = 114.0

[node name="Label" type="Label" parent="FlappyBirdLogo"]
custom_fonts/font = SubResource( 3 )
text = "Flappy bird
- coding pirates"

[node name="KinematicBody2D" type="KinematicBody2D" parent="."]
position = Vector2( 93, 255 )
script = ExtResource( 12 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="KinematicBody2D"]
position = Vector2( 45, -2 )
scale = Vector2( 0.1, 0.1 )
frames = SubResource( 1 )
frame = 6
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="KinematicBody2D"]
position = Vector2( 45, -2 )
shape = SubResource( 2 )

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]
script = ExtResource( 10 )

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]
motion_mirroring = Vector2( 728, 0 )

[node name="Sprite" type="Sprite" parent="ParallaxBackground/ParallaxLayer"]
position = Vector2( 1, 0 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 9 )
centered = false

[node name="Node2D - Flere Vaegge" parent="." instance=ExtResource( 11 )]
position = Vector2( 500, 0 )

[node name="HUD" parent="." instance=ExtResource( 13 )]
margin_left = 203.0
margin_top = 39.0
margin_right = 303.0
margin_bottom = 94.0

[node name="Startknap" type="Control" parent="."]
margin_left = 111.0
margin_top = 327.0
margin_right = 151.0
margin_bottom = 367.0

[node name="Panel" type="Panel" parent="Startknap"]
margin_left = -6.0
margin_top = -2.0
margin_right = 157.0
margin_bottom = 60.0
custom_styles/panel = SubResource( 5 )

[node name="Label" type="Label" parent="Startknap"]
margin_left = 10.0
margin_top = 7.0
margin_right = 155.0
margin_bottom = 58.0
custom_fonts/font = SubResource( 4 )
text = "Start"

[node name="Tissepause" type="Label" parent="."]
margin_left = 70.0
margin_top = 114.0
margin_right = 318.0
margin_bottom = 179.0
custom_fonts/font = SubResource( 3 )
text = "Flappy bird
- pause"

[connection signal="gui_input" from="Startknap/Panel" to="KinematicBody2D" method="_on_Panel_gui_input"]
